experiment with google analytics

--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,4 @@
-<template>
+<template data-analytics-category data-analytics-action data-analytics-label data-analytics-value>
     <require from="styles.css"></require>
     <require from="toastr/build/toastr.min.css"></require>
 
