--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -1,4 +1,15 @@
 <template>
+
+    <style>
+        
+        @media (max-width: 767px){
+            .slide.au-target .slide,
+            .slide.au-target img {
+                width: 100% !important;
+                height: 100% !important;
+            }
+        }
+    </style>
     <section class="container content-area photos" css="height: ${win_height-323}px;">
         <div class="row content-area" style="height:380px;width:100%;margin-bottom:24px;margin-top:20px;padding-right:24px;" dir="rtl">
             <div class="row" style="margin-right:0;margin-left:0;">
