--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -1,6 +1,26 @@
 <template>
     <section class="container content-area">
         <div class="row content-area" style="height:300px;width:100%;margin-top:20px;">
+                <style>
+                    @media (max-width: 767px){
+                        .row.content-area{
+                            margin-top: 20px;
+                            padding-right: 0;
+                            margin-left: 0px;
+                        }
+
+                        .multi-select div.options{
+                            width: 100%;
+                            padding-left: 50px;
+                        }
+                        .input-group {
+                            text-align: center;
+                            width: 100% !important;
+                            padding-left: 10px;
+                            padding-right: 10px;
+                        }
+                    }
+                </style>
             <div class="row">
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;">
