improve mobile behavior

--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -16,7 +16,7 @@
                 settings.bind="{arrows:true, height:220}">
             </photo-strip>
         </div>
-        <div class="container" style="margin-right:-32px;" ref="member_detail_panel">
+        <div class="container" ref="member_detail_panel">
             <div id="member-detail-content" class="row" dir="rtl" ref="top_panel">
                 <div class="col-md-6 col-sm-12">
                     <h3 if.bind="member.family_connections.hasFamilyConnections">${'members.family-connections' & t}</h3>
