--- a/src/resources/elements/photo-strip.html
+++ b/src/resources/elements/photo-strip.html
@@ -19,6 +19,7 @@
             <i class="fa fa-chevron-left fa-3x"></i>
             <i class="fa fa-chevron-left fa-2x" style="color:black;top:6px;left:10px;position:absolute;"></i>
         </div>
+        <div show.bind="false" class.bind="dummy"></div>
     </template>
 
 </template>
