--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation" if.bind="! theme.hide_menu">
             <div class="navbar-main">
                 <div class="nav-items">
-                    <a class="navbar-logo" href="#">
+                    <a class="navbar-logo" href="#" if.bind="theme.width>400">
                         <img if.bind="theme.files.app_logo" src="${theme.files.app_logo}" />
                         <span class="router-title">${router.title & t}</span>
                     </a>
