--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -47,7 +47,7 @@
                         </form>
                     </div>
                     <div class="row" if.bind="! editing_filters">
-                        <button class="btn btn-basic btn-md" 
+                        <button class="btn btn-basic btn-md btn-framed" 
                             if.bind="theme.width<1200" 
                             click.delegate="show_filters_only()"
                             style="margin-bottom:12px">${'terms.edit-filters' & t}
