--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -64,7 +64,7 @@
                     </div>
                     <h3 if.bind="no_results" innerhtml.bind="'no-results' & t">
                     </h3>
-                    <button class="btn btn-basic btn-md btn-framed" 
+                    <button class="btn btn-basic btn-sm btn-framed" 
                         if.bind="theme.width<1200" 
                         click.delegate="show_filters_only()"
                         style="margin-bottom:12px;margin-right:20px">${'photos.edit-filters' & t}
