--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -45,7 +45,7 @@
                                 <button if.bind="user.privileges.ADMIN && selected_photos.size > 0" t="[title]photos.rotate" class="btn btn-basic btn-md" click.delegate="rotate_selected_photos()"><i class="fa fa-undo fa-xs"></i></button>
                             </div>
                             <div class="form-group" if.bind="phase=='photos-not-editing'">
-                                <button class="btn btn-basic btn-md btn-framed" if.bind="theme.width<1200" click.delegate="show_filters_only()">${'photos.edit-filters' & t}</button>
+                                <button class="btn btn-basic btn-sm btn-framed" if.bind="theme.width<1200" click.delegate="show_filters_only()">${'photos.edit-filters' & t}</button>
                                 <help topic="photos-not-editing" position="bottom"></help>
                             </div>
                             <div class="form-group" if.bind="can_pair_photos">
