--- a/src/home/home.html
+++ b/src/home/home.html
@@ -6,8 +6,10 @@
             action_key="Zoom1" settings.bind="{arrows:true, slide_show: 4}" style="padding:0;"></photo-strip>
     </div>
 
-    <div class="panel main-panel" css="height:${panel_height}px;">
-        <div class="panel-messages" css="direction:${theme.rtltr};" ref="scroll_area">
+    <div class="panel main-panel" css="height:${panel_height}px;"
+        interact-draggable.bind="theme.interact_setting"
+        interact-dragend.delegate="drag_end_panel($event)">
+        <div class="panel-messages" css="direction:${theme.rtltr};" ref="scroll_area" if.bind="theme.width >= 1200 || active_part== 3">
             <h2 class="messages-header">
                 <span>${'home.messages' & t}</span>
                 <span class="is-link" if.bind="user.editing" click.delegate="add_message()">
@@ -23,7 +25,7 @@
                 </li>
             </ul>
         </div>
-        <div class="panel-stories" style="direction:rtl;">
+        <div class="panel-stories" style="direction:rtl;" if.bind="theme.width >= 1200 || active_part== 2">
             <h2 class="panel-stories-header">
                 <span class="expand">${'home.sample-stories' & t}</span>
                 <span class="full-collection-button" click.delegate="goto_full_collection()">
@@ -42,9 +44,9 @@
                 </li>
             </ul>
         </div>
-        <div class="panel-vid">
+        <div class="panel-vid" if.bind="theme.width >= 1200 || active_part== 1">
             <span repeat.for="video of video_list | filter:'youtube':'type'" class="fr-video fr-fvc fr-draggable fr-dvi" contenteditable="false" draggable="true">
-                <iframe src.bind="video.src" frameborder="0" allowfullscreen="" style="width: 204px; height: 121px;">
+                <iframe src.bind="video.src" frameborder="0" allowfullscreen="">
                 </iframe>
             </span>
         </div>
