--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -27,7 +27,7 @@
         </ul>
     </div>
 
-    <div class="btn-group dropdown border-right" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.biind="theme.width>498" >
+    <div class="btn-group dropdown border-right" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="theme.width>458" >
         <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
             <i class="far fa-lg fa-globe"></i>
             <span class="caret"></span>
